app/styles/app.css
body {
  font-family: 'Play';
}

h2, h6 {
  text-align: center;
}

h2 {
  margin-top: 0px !important;
}

h4 {
  text-align: center;
}

a, a:visited {
  color: #FFF;
}

a:hover {
  text-decoration: underline;
  color: #6f99e5;
}

.index-label {
  margin-top: 0px !important;
}

.well {
  width: 58%;
  display: block;
  margin: 30px auto;
  background-color: #000;
  color: #FFF;
}

.btn {
  display: block;
  margin: 0 auto;
  background: #FFF;
  color: #000;
  border: 1px solid #000;
}

.btn:hover {
  background: #6f99e5;
  color: #000;
}

#footer {
  margin-top: 30px;
}

#logo {
  display: block;
  margin: 15px auto;
}

#edit {
  width: 15px;
  height: auto;
}

#question-content {
  margin-top: 30px;
}

